--- a/Cleaned_US_DF.ipynb
+++ b/Cleaned_US_DF.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 1,
    "id": "af7e14aa-388c-4c97-b32a-0b7b267bd4a0",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 2,
    "id": "da124936-e349-42fd-917b-f19ecc54d691",
    "metadata": {},
    "outputs": [],
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 3,
    "id": "ddcbbf6d-7d5c-424b-afda-2c1687ed0c1e",
    "metadata": {},
    "outputs": [],
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 4,
    "id": "d8b564e1-2f5e-4897-b940-84b0368e2aa5",
    "metadata": {},
    "outputs": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 5,
    "id": "29feefd0-b7d4-43ce-8023-726509153a6f",
    "metadata": {},
    "outputs": [
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 6,
    "id": "ccee54b4-0559-4475-913f-a1b12ec8b6a4",
    "metadata": {},
    "outputs": [
@@ -149,7 +149,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 7,
    "id": "02d5b954-9438-42e5-b4d9-80735245e7d2",
    "metadata": {},
    "outputs": [],
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 8,
    "id": "d986cc49-c823-4542-a9b1-8d34c98d10d4",
    "metadata": {},
    "outputs": [],
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 9,
    "id": "96f765db-78b0-478f-a79c-3a1fd4ffc398",
    "metadata": {},
    "outputs": [],
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 10,
    "id": "0554b798-cfb3-49c1-a777-05749e308974",
    "metadata": {},
    "outputs": [],
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 11,
    "id": "c585e6e2-0a2f-489b-9eb8-a4f09fbf17df",
    "metadata": {},
    "outputs": [],
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 12,
    "id": "1cd3e430-5212-4dac-8146-c08cc6919731",
    "metadata": {},
    "outputs": [
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 13,
    "id": "c117930b-634e-42ea-9105-dbeaa0e320ca",
    "metadata": {},
    "outputs": [],
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 14,
    "id": "e889a7b7-bd97-419c-ae3a-61f574432d4f",
    "metadata": {},
    "outputs": [
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 15,
    "id": "3ac09706-3d0a-4f0b-9553-52ab117f182b",
    "metadata": {},
    "outputs": [],
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 16,
    "id": "4f0151ec-ac5f-4e11-bb4b-34f0e0aaa5f0",
    "metadata": {},
    "outputs": [
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 17,
    "id": "1ef507a9-9f60-497f-aa5f-3a5789256b8e",
    "metadata": {
     "scrolled": true
@@ -540,7 +540,7 @@
        "[150 rows x 3 columns]"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -571,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 18,
    "id": "b23907b7-4ceb-4f7b-a255-5ba5cab65bcc",
    "metadata": {},
    "outputs": [
@@ -753,7 +753,7 @@
        "14            18  "
       ]
      },
-     "execution_count": 54,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -780,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 19,
    "id": "82c09ee3-9bab-40bb-ad0a-40c1e2080aaf",
    "metadata": {},
    "outputs": [
@@ -812,7 +812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 20,
    "id": "e1026604-66ec-427b-87ab-78c49beffa70",
    "metadata": {},
    "outputs": [
@@ -844,7 +844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 21,
    "id": "cb6a95c4-e4f7-4a97-8190-7212aa8ce61c",
    "metadata": {},
    "outputs": [
@@ -884,7 +884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 22,
    "id": "e496922e-035f-4f1c-a2ad-82276a420559",
    "metadata": {},
    "outputs": [],
@@ -912,7 +912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 23,
    "id": "3c2d030f-75a3-4ae4-9709-eef6b8525e9c",
    "metadata": {},
    "outputs": [
@@ -920,19 +920,19 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\silve\\AppData\\Local\\Temp\\ipykernel_17796\\324198110.py:6: SettingWithCopyWarning: \n",
+      "C:\\Users\\silve\\AppData\\Local\\Temp\\ipykernel_23052\\324198110.py:6: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  top_ten_df['Recall Initiation Date'] = pd.to_datetime(top_ten_df['Recall Initiation Date'])\n",
-      "C:\\Users\\silve\\AppData\\Local\\Temp\\ipykernel_17796\\324198110.py:7: SettingWithCopyWarning: \n",
+      "C:\\Users\\silve\\AppData\\Local\\Temp\\ipykernel_23052\\324198110.py:7: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  top_ten_df['Termination Date'] = pd.to_datetime(top_ten_df['Termination Date'])\n",
-      "C:\\Users\\silve\\AppData\\Local\\Temp\\ipykernel_17796\\324198110.py:10: SettingWithCopyWarning: \n",
+      "C:\\Users\\silve\\AppData\\Local\\Temp\\ipykernel_23052\\324198110.py:10: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -962,7 +962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 24,
    "id": "7b536842-0c2b-4faa-ab84-e9ea62ca202f",
    "metadata": {},
    "outputs": [
@@ -1015,7 +1015,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 25,
    "id": "b554bd96-2411-47b9-bfb7-e35e423a4584",
    "metadata": {},
    "outputs": [
@@ -1055,7 +1055,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 26,
    "id": "6ec68b68-f87c-4da9-87ff-39e67c4c1ada",
    "metadata": {},
    "outputs": [
@@ -1154,7 +1154,7 @@
        "188       2024-02-22                   450  "
       ]
      },
-     "execution_count": 62,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1167,7 +1167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 27,
    "id": "68df6dc3-2efb-426a-8704-a07abba4e7f4",
    "metadata": {},
    "outputs": [
@@ -1212,7 +1212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 28,
    "id": "d62ce0ef-61f9-4751-bbce-6b2e9c91defb",
    "metadata": {},
    "outputs": [
@@ -1252,19 +1252,182 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 36,
    "id": "edd04eb9-ccb9-4338-9e03-5ad282621fb4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Status</th>\n",
+       "      <th>City</th>\n",
+       "      <th>State</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Classification</th>\n",
+       "      <th>Product Type</th>\n",
+       "      <th>Recalling Firm</th>\n",
+       "      <th>Product Description</th>\n",
+       "      <th>Product Quantity</th>\n",
+       "      <th>Reason for Recall</th>\n",
+       "      <th>Recall Initiation Date</th>\n",
+       "      <th>Termination Date</th>\n",
+       "      <th>Time to Close (Days)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Terminated</td>\n",
+       "      <td>Parsippany</td>\n",
+       "      <td>NJ</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>Class II</td>\n",
+       "      <td>Drugs</td>\n",
+       "      <td>Teva Pharmaceuticals USA</td>\n",
+       "      <td>Dextroamphetamine Saccharate, Amphetamine Aspa...</td>\n",
+       "      <td>33,280 bottles</td>\n",
+       "      <td>Some bottles may contain mixed strengths of th...</td>\n",
+       "      <td>2020-05-22</td>\n",
+       "      <td>2021-05-25</td>\n",
+       "      <td>368</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Terminated</td>\n",
+       "      <td>Allegan</td>\n",
+       "      <td>MI</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>Class II</td>\n",
+       "      <td>Drugs</td>\n",
+       "      <td>Perrigo Company PLC</td>\n",
+       "      <td>No Drip Nasal Spray, Oxymetazoline HCl 0.05% N...</td>\n",
+       "      <td>1,560 bottles</td>\n",
+       "      <td>CGMP Deviations: Products were manufactured wi...</td>\n",
+       "      <td>2021-10-26</td>\n",
+       "      <td>2023-09-29</td>\n",
+       "      <td>703</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Terminated</td>\n",
+       "      <td>Dublin</td>\n",
+       "      <td>OH</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>Class II</td>\n",
+       "      <td>Drugs</td>\n",
+       "      <td>Cardinal Health Inc.</td>\n",
+       "      <td>Edarbi (azilsartan medoxomil) tablets 80 mg 30...</td>\n",
+       "      <td>328 bottles</td>\n",
+       "      <td>CGMP Deviations: Intermittent exposure to temp...</td>\n",
+       "      <td>2021-03-15</td>\n",
+       "      <td>2024-06-17</td>\n",
+       "      <td>1190</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>Terminated</td>\n",
+       "      <td>Los Angeles</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>Class II</td>\n",
+       "      <td>Drugs</td>\n",
+       "      <td>Fusion IV Pharmaceuticals, Inc. dba Axia Pharm...</td>\n",
+       "      <td>Polyoxyl Lauryl Ether (Polidocanol) Injection,...</td>\n",
+       "      <td>N/A</td>\n",
+       "      <td>Lack of Assurance of Sterility</td>\n",
+       "      <td>2020-01-15</td>\n",
+       "      <td>2023-12-07</td>\n",
+       "      <td>1422</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>Terminated</td>\n",
+       "      <td>Dublin</td>\n",
+       "      <td>OH</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>Class II</td>\n",
+       "      <td>Drugs</td>\n",
+       "      <td>Cardinal Health Inc.</td>\n",
+       "      <td>xigduo XR (dapgliflozin/metformin HCl extended...</td>\n",
+       "      <td>664 bottles</td>\n",
+       "      <td>CGMP Deviations: Intermittent exposure to temp...</td>\n",
+       "      <td>2021-03-15</td>\n",
+       "      <td>2024-06-17</td>\n",
+       "      <td>1190</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Status         City State        Country Classification Product Type  \\\n",
+       "1   Terminated   Parsippany    NJ  United States       Class II        Drugs   \n",
+       "2   Terminated      Allegan    MI  United States       Class II        Drugs   \n",
+       "4   Terminated       Dublin    OH  United States       Class II        Drugs   \n",
+       "13  Terminated  Los Angeles    CA  United States       Class II        Drugs   \n",
+       "15  Terminated       Dublin    OH  United States       Class II        Drugs   \n",
+       "\n",
+       "                                       Recalling Firm  \\\n",
+       "1                            Teva Pharmaceuticals USA   \n",
+       "2                                 Perrigo Company PLC   \n",
+       "4                                Cardinal Health Inc.   \n",
+       "13  Fusion IV Pharmaceuticals, Inc. dba Axia Pharm...   \n",
+       "15                               Cardinal Health Inc.   \n",
+       "\n",
+       "                                  Product Description Product Quantity  \\\n",
+       "1   Dextroamphetamine Saccharate, Amphetamine Aspa...   33,280 bottles   \n",
+       "2   No Drip Nasal Spray, Oxymetazoline HCl 0.05% N...    1,560 bottles   \n",
+       "4   Edarbi (azilsartan medoxomil) tablets 80 mg 30...      328 bottles   \n",
+       "13  Polyoxyl Lauryl Ether (Polidocanol) Injection,...              N/A   \n",
+       "15  xigduo XR (dapgliflozin/metformin HCl extended...      664 bottles   \n",
+       "\n",
+       "                                    Reason for Recall Recall Initiation Date  \\\n",
+       "1   Some bottles may contain mixed strengths of th...             2020-05-22   \n",
+       "2   CGMP Deviations: Products were manufactured wi...             2021-10-26   \n",
+       "4   CGMP Deviations: Intermittent exposure to temp...             2021-03-15   \n",
+       "13                     Lack of Assurance of Sterility             2020-01-15   \n",
+       "15  CGMP Deviations: Intermittent exposure to temp...             2021-03-15   \n",
+       "\n",
+       "   Termination Date  Time to Close (Days)  \n",
+       "1        2021-05-25                   368  \n",
+       "2        2023-09-29                   703  \n",
+       "4        2024-06-17                  1190  \n",
+       "13       2023-12-07                  1422  \n",
+       "15       2024-06-17                  1190  "
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "classii_firms = top_ten_df[top_ten_df['Classification'] == 'Class II']\n",
     "\n",
-    "#classii_firms.head()"
+    "classii_firms.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 37,
    "id": "95a5561b-fe89-4a1b-83f8-731ed1ec6f90",
    "metadata": {},
    "outputs": [
@@ -1316,7 +1479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 38,
    "id": "ff63c9ff-d704-4172-8c99-29a9d2c2d066",
    "metadata": {},
    "outputs": [
@@ -1356,7 +1519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 32,
    "id": "ab3f9ef9-4b01-433b-ba92-1d180ae65f7a",
    "metadata": {},
    "outputs": [],
@@ -1368,7 +1531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 33,
    "id": "f7d124f8-50a7-44e5-aeaf-555e02a3afb6",
    "metadata": {},
    "outputs": [
@@ -1413,7 +1576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 34,
    "id": "73a4a33e-16bc-4130-a3b7-62e571c83e44",
    "metadata": {},
    "outputs": [
